--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "extends": "xo",
     "rules": {
         "key-spacing": 0,
@@ -12,10 +13,23 @@
         ]
     },
     "env": {
-        "node" : true,
-        "es6"  : true
+        "node": true,
+        "es6": true,
+        "amd": true,
+        "browser": true,
+        "jquery": true
     },
     "globals": {
-        "jQuery" : true
+        "wp": true
+    },
+    "plugins": [
+        "import",
+    ],
+    "settings": {
+        "import/core-modules": [],
+        "import/ignore": [
+            "node_modules",
+            "\\.(coffee|scss|css|less|hbs|svg|json)$"
+        ]
     }
 }
