--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "SSN Lookup Plugin for Wordpress",
     "type": "project",
     "require-dev": {
-        "squizlabs/php_codesniffer": "^2.8"
+        "squizlabs/php_codesniffer": "^2.8",
+        "phpunit/phpunit": "^5.7"
     },
     "authors": [
         {
