--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "maxbaun/ssn",
+	"version" : "1.1.1",
     "description": "SSN Lookup Plugin for Wordpress",
     "type": "project",
     "require-dev": {
